tests/agl/rejections/type/strict_json_on_text_codec.agl
let x = ask[strict_json: true] "Question."
